<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auto Volume</string>
    <string name="action_settings">Settings</string>
    <string name="action_donate">Donate</string>
    <string name="action_add">Add</string>
    <string name="no_alarms">Nothing set yet!</string>
    <string name="menu_delete">Delete</string>

    <string name="pref_category_general">General</string>
    <string name="pref_category_calendar">Calendar</string>
    <string name="pref_category_powerConnected">Power Connected</string>

    <string name="pref_notify_key">pref_notify</string>
    <string name="pref_notify_default">true</string>
    <string name="pref_notify_title">Notifications</string>
    <string name="pref_notify_summary">Alert for volume changes</string>

    <string name="pref_calendar_enabled_key">pref_calendar_enabled</string>
    <string name="pref_calendar_enabled_default">true</string>
    <string name="pref_calendar_enabled_title">Include calendar events</string>
    <string name="pref_calendar_enabled_summary">Automatically silence based on calendar events</string>

    <string name="pref_calendar_list_key">pref_calendar_list</string>
    <string-array name="pref_calendar_list_default" />
    <string name="pref_calendar_list_title">Select calendars</string>
    <string name="pref_calendar_list_summary">Pick the calendars to include</string>

    <string name="pref_calendar_volumeLevel_restore_key">pref_calendar_volumeLevel_restore</string>
    <string name="pref_calendar_volumeLevel_restore_default">7</string>
    <string name="pref_calendar_volumeLevel_restore_title">Restore Volume Level</string>
    <string name="pref_calendar_volumeLevel_restore_summary">After calendar event, restore to this volume</string>

    <string name="pref_enabled_key">pref_enabled</string>
    <string name="pref_enabled_default">true</string>
    <string name="pref_enabled_title">Enabled</string>
    <string name="pref_enabled_summary">Change volume when plugged in</string>

    <string name="pref_volumeLevel_key">pref_volumeLevel</string>
    <string name="pref_volumeLevel_default">0</string>
    <string name="pref_volumeLevel_title">Volume Level</string>
    <string name="pref_volumeLevel_summary">Set volume to this level</string>

    <string name="pref_startTime_key">pref_startTime</string>
    <string name="pref_startTime_default">21:00</string>
    <string name="pref_startTime_title">Start Time</string>
    <string name="pref_startTime_summary">Change volume after this time</string>

    <string name="pref_endTime_key">pref_endTime</string>
    <string name="pref_endTime_default">7:00</string>
    <string name="pref_endTime_title">End Time</string>
    <string name="pref_endTime_summary">Change volume before this time</string>

    <string name="default_tv_time">12:00</string>
    <string name="default_tv_recur">One Time</string>
    <string name="default_tv_volume">100%</string>
    <string name="default_tv_title">Event Start: What happens when the event title is super long like this?</string>
    <string name="title_activity_main_activity_new">MainActivityNew</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
</resources>
