<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_general">
        <CheckBoxPreference
            android:defaultValue="@string/pref_notify_default"
            android:key="@string/pref_notify_key"
            android:summary="@string/pref_notify_summary"
            android:title="@string/pref_notify_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_calendar">
        <CheckBoxPreference
            android:defaultValue="@string/pref_calendar_enabled_default"
            android:key="@string/pref_calendar_enabled_key"
            android:summary="@string/pref_calendar_enabled_summary"
            android:title="@string/pref_calendar_enabled_title" />
        <com.mynameistodd.autovolume.CalendarListPreference
            android:defaultValue="@array/pref_calendar_list_default"
            android:key="@string/pref_calendar_list_key"
            android:summary="@string/pref_calendar_list_summary"
            android:title="@string/pref_calendar_list_title"
            android:dependency="@string/pref_calendar_enabled_key" />
        <com.mynameistodd.autovolume.NumberPickerPreference
            android:defaultValue="@string/pref_calendar_volumeLevel_restore_default"
            android:key="@string/pref_calendar_volumeLevel_restore_key"
            android:summary="@string/pref_calendar_volumeLevel_restore_summary"
            android:title="@string/pref_calendar_volumeLevel_restore_title"
            android:dependency="@string/pref_calendar_enabled_key" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_powerConnected">
        <CheckBoxPreference
            android:defaultValue="@string/pref_enabled_default"
            android:key="@string/pref_enabled_key"
            android:summary="@string/pref_enabled_summary"
            android:title="@string/pref_enabled_title" />

        <com.mynameistodd.autovolume.NumberPickerPreference
            android:defaultValue="@string/pref_volumeLevel_default"
            android:key="@string/pref_volumeLevel_key"
            android:summary="@string/pref_volumeLevel_summary"
            android:title="@string/pref_volumeLevel_title"
            android:dependency="@string/pref_enabled_key" />

        <com.mynameistodd.autovolume.TimePreference
            android:defaultValue="@string/pref_startTime_default"
            android:key="@string/pref_startTime_key"
            android:summary="@string/pref_startTime_summary"
            android:title="@string/pref_startTime_title"
            android:dependency="@string/pref_enabled_key" />

        <com.mynameistodd.autovolume.TimePreference
            android:defaultValue="@string/pref_endTime_default"
            android:key="@string/pref_endTime_key"
            android:summary="@string/pref_endTime_summary"
            android:title="@string/pref_endTime_title"
            android:dependency="@string/pref_enabled_key" />
    </PreferenceCategory>
</PreferenceScreen>